# bootcamp-python

./: README.md  pyproject.toml
aula_1-5/: main.py
aula_1-5/aula_1/: ambientação de projeto no python.md  desafio_01.py  desafio_02.py  kpi.py
aula_1-5/aula_2/: conceito_try_except.py  desafio_kpi.py  exercicios_aula_02.ipynb  exercicios_aula_02_try_except.ipynb
aula_1-5/aula_3/: ex_02.py  main.py
aula_1-5/aula_3/for/: ex_contagem.py  ex_dados_faltantes.py  ex_pares.py  ex_vendas.py  for_inline.py  main.py
aula_1-5/aula_3/if/: ex_01.py  ex_03.py  ex_04.py  ex_05.py  teste_conceito_range.py
aula_1-5/aula_3/while/: desafio_while.py  ex_api_paginada.py  ex_flag.py  ex_item_flag_lista.py  ex_tentativas_conexao.py  ex_while_range.py
aula_1-5/aula_4/: tipagem.py
aula_1-5/aula_4/dicionarios_excercicios/: dic.py  ex_01.py  ex_02.py  ex_03.py  ex_04.py  ex_05.py  exemplo_dict.py
aula_1-5/aula_4/lista_exercicios/: ex_01.py  ex_02.py  ex_03.py  ex_04.py  ex_05.py  lista.py
aula_11-15/aula_13/data/json_files/: json_file.json
aula_11-15/aula_13/src/libs/: read_file_class.py
aula_11-15/aula_13/src/libs/classes/: read_file_class.py
aula_6-10/aula_08/: etl.py  main.py  vendas.csv  vendas.parquet
aula_6-10/aula_09/: exemplo_00.py  steps.md  utils_log.py
aula_6-10/aula_7/: func_ex.py
aula_6-10/aula_7/desafio_part1/: main.py  utils.py
